<resources>
	<string name="app_name">NoteKeeper</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_note">Edit Note</string>
	<string name="title_activity_main">NoteKeeper</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>

	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="menu_tools">Tools</string>
	<string name="menu_share">Share</string>
	<string name="menu_send">Send</string>
	<string name="note_title_hint">Note title</string>
	<string name="note_text_hint">Note text</string>
	<string name="nav_share_message">Share</string>
	<string name="nav_send_message">Send</string>
	<string name="notes">Notes</string>
	<string name="courses">Courses</string>
	<string name="title_activity_settings">Settings</string>

	<!-- Preference Titles -->
	<string name="general_header">General</string>
	<string name="sync_header">Sync</string>

	<!-- General Preferences -->
	<string name="pref_title_display_name">Display name</string>
	<string name="pref_title_email_address">Email Address</string>
	<string name="reply_title">Default reply action</string>

	<!-- General Preferences Default values -->
	<string name="pref_default_display_name">Your Name</string>
	<string name="pref_default_email_address">youname@yourhost.com</string>


	<!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="pref_title_favorite_social">Favorite social network</string>

	<string-array name="pref_entries_favorite_social">
		<item>Google+</item>
		<item>Facebook</item>
		<item>Twitter</item>
	</string-array>
	<string-array name="pref_values_favorite_social">
		<item>http://plus.google.com</item>
		<item>http://facebook.com</item>
		<item>http://twitter.com</item>
	</string-array>
	<string name="pref_default_favorite_social">http://plus.google.com</string>
	<string name="action_delete">Delete</string>
	<string name="action_set_reminder">Set reminder</string>

	<string name="note_reminder_notification_title_template">Note reminder: %1$s</string>

	<!-- TODO: remove this placeholder text -->
	<string name="note_reminder_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet,
		consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat
		velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed
		nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
		viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
	</string>

	<string name="settings_reminder_notification_title_template">Settings reminder: %1$s</string>

	<!-- TODO: remove this placeholder text -->
	<string name="settings_reminder_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit
		amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio
		volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus.
		Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit
		amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
	</string>
	<string name="menu_header_other">Others</string>
	<string name="action_backup">Backup notes</string>
	<string name="action_upload_notes">Upload notes</string>
	<string name="action_cancel_reminder">Cancel reminder</string>
</resources>
