<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
			app:title="@string/general_header">

		<EditTextPreference
				app:key="user_display_name"
				app:title="@string/pref_title_display_name"
				app:defaultValue="@string/pref_default_display_name"
		/>

		<EditTextPreference
				app:key="user_email_address"
				app:title="@string/pref_title_email_address"
				app:defaultValue="@string/pref_default_email_address"
				android:singleLine="true" android:inputType="textEmailAddress"/>
		<ListPreference
				android:defaultValue="@string/pref_default_favorite_social"
				android:title="@string/pref_title_favorite_social" android:entries="@array/pref_entries_favorite_social"
				android:entryValues="@array/pref_values_favorite_social" android:key="user_favorite_social"/>

	</PreferenceCategory>

	<PreferenceCategory
			app:title="@string/sync_header">

		<SwitchPreferenceCompat
				app:key="sync"
				app:title="@string/sync_title"/>

		<SwitchPreferenceCompat
				app:key="attachment"
				app:title="@string/attachment_title"
				app:summaryOn="@string/attachment_summary_on"
				app:summaryOff="@string/attachment_summary_off"
				app:dependency="sync"/>

	</PreferenceCategory>

</PreferenceScreen>
