<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context="com.klid.android.notekeeper.NoteActivity">
	<item android:title="@android:string/cancel" android:id="@+id/action_cancel"
		  android:icon="@android:drawable/ic_menu_revert" app:showAsAction="ifRoom|withText"/>
	<item android:title="@string/action_delete" android:id="@+id/action_delete"
		  android:icon="@android:drawable/ic_menu_delete"
		  app:showAsAction="ifRoom|withText"/>
	<item android:title="Next" android:id="@+id/action_next" app:showAsAction="ifRoom|withText"
		  android:icon="@android:drawable/ic_media_next" android:visible="false"/>
	<item android:id="@+id/action_send_mail"
		  android:title="Send as email"
		  android:orderInCategory="100"
		  app:showAsAction="never"/>
	<item android:id="@+id/action_set_reminder" android:title="@string/action_set_reminder" app:showAsAction="never"/>
	<item android:title="@string/action_cancel_reminder" android:id="@+id/action_cancel_reminder"/>
</menu>
